Updated Allen Ginsberg at Hudson 1994

--- a/_data/allen-ginsberg-at-hudson-1994/manifest.json
+++ b/_data/allen-ginsberg-at-hudson-1994/manifest.json
@@ -27,6 +27,12 @@
           
           {
             "type": "AnnotationPage",
+            "id": "https://kywark.github.io/allen-ginsberg-collab/allen-ginsberg-at-hudson-1994/canvas-1/canvas/layer2.json",
+            "label": "layer2"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://kywark.github.io/allen-ginsberg-collab/allen-ginsberg-at-hudson-1994/canvas-1/canvas/layer1.json",
             "label": "layer1"
           }
